feat(Editor): propriedades do documento

--- a/frontend/src/css/components/dialog.css
+++ b/frontend/src/css/components/dialog.css
@@ -70,9 +70,9 @@
 }
 
 .dialog-confirm {
-    background-color: var(--error);
+    background-color: var(--success);
     color: #fff;
-    border: 1px solid var(--error);
+    border: 1px solid var(--success);
 }
 
 .dialog-confirm:hover {
