--- a/frontend/src/css/components/editor/components/component.css
+++ b/frontend/src/css/components/editor/components/component.css
@@ -15,3 +15,4 @@
 @import url(./menu-index.css);
 @import url(./autocomplete.css);
 @import url(./internal-link.css);
+@import url(./doc-settings.css);
